--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-mdl": "^1.11.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
