--- a/admin/package.json
+++ b/admin/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
-    "jquery": "^1.9.1",
+    "jquery": "^3.4.1",
     "jss": "^9.8.7",
     "material-table": "^1.57.2",
     "material-ui": "^1.0.0-beta.46",
@@ -20,6 +20,7 @@
     "react-mdl": "^2.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "styled-components": "^5.0.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
