--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "material-ui": "^1.0.0-beta.46",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdbreact": "^4.25.3",
+    "muicss": "^0.10.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
