--- a/admin/package.json
+++ b/admin/package.json
@@ -19,6 +19,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
+    "react-horizontal-scrolling-menu": "^0.7.7",
     "react-mdl": "^2.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
