signup page overlay
signup api not working properly despite api working, may be issue with request on front end

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "backend": "(cd backend/api && .\\env\\Scripts\\activate && py api.py prashant)",
+        "backend": "(cd backend/api && .\\env\\Scripts\\activate && py api.py)",
         "client": "(cd client && npm run start)",
         "start": "run-p backend client"
     },
