--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "PORT=8080 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
