--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,8 @@
     "muicss": "^0.10.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table2-editor": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-horizontal-scrolling-menu": "^0.7.7",
     "react-mdl": "^2.1.0",
