--- a/mobile/InfiniteMeals/InfiniteMeals.Android/InfiniteMeals.Android.csproj
+++ b/mobile/InfiniteMeals/InfiniteMeals.Android/InfiniteMeals.Android.csproj
@@ -90,13 +90,18 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InfiniteMeals\InfiniteMeals.csproj">
       <Project>{842A21D5-D40F-404F-9FE7-574C28C11704}</Project>
       <Name>InfiniteMeals</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\mealplan.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\homepage.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
