--- a/admin/package.json
+++ b/admin/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
+    "tableau-api": "^2.2.3",
     "typescript": "^3.8.3"
   },
   "scripts": {
