--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "react-mdl": "^1.11.0",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
