--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-mdl": "^1.11.0",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "tooltip": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
