--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "moment": "^2.25.3",
     "mysql": "^2.17.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
