--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "moment": "^2.25.3",
     "mysql": "^2.17.1",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "^1.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
