--- a/admin/package.json
+++ b/admin/package.json
@@ -27,15 +27,16 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select-material-ui": "^6.5.0",
+    "react-spinners": "^0.8.3",
     "styled-components": "^5.0.1",
     "tableau-api": "^2.2.3",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "customize-cra": "^0.9.1",
+    "react-app-rewired": "^2.1.6"
   }
 }
