--- a/admin/package.json
+++ b/admin/package.json
@@ -33,10 +33,10 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,7 +54,6 @@
     ]
   },
   "devDependencies": {
-    "customize-cra": "^0.9.1",
-    "react-app-rewired": "^2.1.6"
+    "customize-cra": "^0.9.1"
   }
 }
