--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-horizontal-scrolling-menu": "^0.7.7",
+    "react-icons": "^3.10.0",
     "react-mdl": "^2.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
@@ -33,10 +34,10 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,7 +55,6 @@
     ]
   },
   "devDependencies": {
-    "customize-cra": "^0.9.1",
-    "react-app-rewired": "^2.1.6"
+    "customize-cra": "^0.9.1"
   }
 }
