--- a/InfiniteMeals/InfiniteMeals.Android/InfiniteMeals.Android.csproj
+++ b/InfiniteMeals/InfiniteMeals.Android/InfiniteMeals.Android.csproj
@@ -98,6 +98,10 @@
       <Generator>
       </Generator>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\defaultmeal.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InfiniteMeals\InfiniteMeals.csproj">
