fixed vaidation for expiration date on payment page

--- a/InfiniteMeals/InfiniteMeals.Android/InfiniteMeals.Android.csproj
+++ b/InfiniteMeals/InfiniteMeals.Android/InfiniteMeals.Android.csproj
@@ -99,8 +99,10 @@
       </Generator>
     </AndroidResource>
     <AndroidResource Include="Resources\drawable\defaultmeal.png">
-      <SubType></SubType>
-      <Generator></Generator>
+      <SubType>
+      </SubType>
+      <Generator>
+      </Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
