--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-slick": "^0.26.1",
     "tooltip": "^1.6.1"
   },
   "scripts": {
