--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1",
     "tooltip": "^1.6.1"
   },
   "scripts": {
