reset password implemented

--- a/InfiniteMeals/InfiniteMeals/InfiniteMeals.csproj
+++ b/InfiniteMeals/InfiniteMeals/InfiniteMeals.csproj
@@ -53,6 +53,9 @@
     <EmbeddedResource Update="ViewModel\Dbvm\Dbvm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ViewModel\Login\ResetPasswordPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ViewModel\Profile\ChangePasswordPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
