--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
+    "react-ga": "^3.1.2",
     "react-google-login": "^5.1.14",
     "react-mdl": "^1.11.0",
     "react-modal": "^3.11.1",
