--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.1.2",
     "react-horizontal-scrolling-menu": "^0.7.7",
     "react-icons": "^3.10.0",
     "react-mdl": "^2.1.0",
