--- a/admin/package.json
+++ b/admin/package.json
@@ -3,37 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.2",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
     "jss": "^9.8.7",
-    "material-table": "^1.57.2",
+    "material-table": "^1.69.0",
     "material-ui": "^1.0.0-beta.46",
     "material-ui-icons": "^1.0.0-beta.36",
-    "mdbreact": "^4.25.3",
-    "muicss": "^0.10.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "mdbreact": "^4.27.0",
+    "muicss": "^0.10.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table2-editor": "^1.4.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-horizontal-scrolling-menu": "^0.7.7",
-    "react-icons": "^3.10.0",
+    "react-icons": "^3.11.0",
     "react-mdl": "^2.1.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-select-material-ui": "^6.5.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "react-select-material-ui": "^6.7.0",
     "react-spinners": "^0.8.3",
-    "styled-components": "^5.0.1",
+    "styled-components": "^5.1.1",
     "tableau-api": "^2.2.3",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
